# mellow-hyena

./: .gitignore  README.md  note  notes.txt  sample.json
infra/: dump1090.service  dump978.service  rc.local.rpi  rc.local.uat
infra/psql/: README.md  add_schema.sh  adsb_exchange.psql  adsb_rank.psql  adsb_ranking.psql  aircraft.psql  box_score.psql  cooked.psql  daily_score.psql  device.psql  drop_schema.sh  genesis.sh  load_log.psql  notes.txt  observation.psql  site.psql
iq/: notes.txt
md-uml/: hyena.mdzip.bak
reports/: 2024-02-25-anderson1-rpi4c-adsb-1090.md  2024-02-25-vallejo1-rpi3a-uat-978.md  2024-02-25-vallejo1-rpi4a-adsb-1090.md  2024-02-26-anderson1-rpi4c-adsb-1090.md  2024-02-26-vallejo1-rpi3a-uat-978.md  2024-02-26-vallejo1-rpi4a-adsb-1090.md  2024-02-27-anderson1-rpi4c-adsb-1090.md  2024-02-27-vallejo1-rpi3a-uat-978.md  2024-02-27-vallejo1-rpi4a-adsb-1090.md  2024-02-28-anderson1-rpi4c-adsb-1090.md  2024-02-28-vallejo1-rpi3a-uat-978.md  2024-02-28-vallejo1-rpi4a-adsb-1090.md  2024-02-29-vallejo1-rpi3a-uat-978.md  2024-02-29-vallejo1-rpi4a-adsb-1090.md  2024-03-01-anderson1-rpi4c-adsb-1090.md  2024-03-01-vallejo1-rpi3a-uat-978.md  2024-03-01-vallejo1-rpi4a-adsb-1090.md  2024-03-02-anderson1-rpi4c-adsb-1090.md  2024-03-02-vallejo1-rpi3a-uat-978.md  2024-03-02-vallejo1-rpi4a-adsb-1090.md  2024-03-03-anderson1-rpi4c-adsb-1090.md  2024-03-03-vallejo1-rpi3a-uat-978.md  2024-03-03-vallejo1-rpi4a-adsb-1090.md  2024-03-04-anderson1-rpi4c-adsb-1090.md  2024-03-04-vallejo1-rpi3a-uat-978.md  2024-03-04-vallejo1-rpi4a-adsb-1090.md  2024-03-05-anderson1-rpi4c-adsb-1090.md  2024-03-05-vallejo1-rpi3a-uat-978.md  2024-03-05-vallejo1-rpi4a-adsb-1090.md  2024-03-06-anderson1-rpi4c-adsb-1090.md  2024-03-06-vallejo1-rpi3a-uat-978.md  2024-03-06-vallejo1-rpi4a-adsb-1090.md  2024-03-07-anderson1-rpi4c-adsb-1090.md  2024-03-07-vallejo1-rpi3a-uat-978.md  2024-03-07-vallejo1-rpi4a-adsb-1090.md  2024-03-08-anderson1-rpi4c-adsb-1090.md  2024-03-08-vallejo1-rpi3a-uat-978.md  2024-03-08-vallejo1-rpi4a-adsb-1090.md  2024-03-09-anderson1-rpi4c-adsb-1090.md  2024-03-09-vallejo1-rpi3a-uat-978.md  (+1043 more)
requirement/: INDEX.md  REQUIREMENT0001.md  REQ_0001.md  REQ_0002.md  REQ_0003.md  REQ_0004.md  REQ_0005.md  REQ_0006.md  REQ_0007.md
samples/: 07696b0a-8ebc-4705-b343-1b00ad5be966  268797df-66b3-4cb9-84dd-63a8cf0e5f56  705bf37c-0666-4f2b-9a6a-f95e4e5630b4  79c04260-43f3-4766-bf06-e93dbd080b3b  c60992a6-4a23-48d9-a508-4ef8c90cfd51  dacc3c53-f827-4b26-b733-577a985e27f7  kapc.978  kmhr.978  ksac.978  ksfo.978
src/adsb-collect/: README.md  collector.py  config.example  requirements.txt
src/adsb-collect2/: adsb_exchange.py  collector.py  config.example  config.yaml  requirements.txt
src/adsb-decode2/: .indent.pro  decoder.c  decoder.h  main.c  makefile  sample.c  sample.h  utility.c  utility.h  xx
src/adsb-decoder/: CMakeLists.txt  DecoderConfiguration.h.in  README.md  decoder.cc  decoder.h  decoder_test.cc  df_17_18.cc  df_17_18.h  driver.cc  format.sh  historian.cc  historian.h  sample.data  utility.cc  utility.h
src/adsb_collect/: README.md  adsb_exchange.py  black_all.sh  collector.py  config.yaml  req2  requirements.txt
src/back-end-old/: README.md  adsb.select  config.test  hyena.py  parser.py  personality.py  postgres.py  sql_table.py  test_great_circle.py  (+6 more)
src/decoder/: CMakeLists.txt  DecoderConfig.h.in  decoder.cc  decoder.h
uml/: hyena.mdzip  hyena.mdzip.bak
web/: 2024.html  2025.html  index.html
(+71 files in other folders)
